k8s/test/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nftytribe-v2-be-cluster-ip-service
  namespace: test
spec:
  type: ClusterIP
  selector:
    nftytribe-v2-test: api
  ports:
    - port: 4000
      targetPort: 4000
