k8s/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nftytribe-v2-be
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      nftytribe-v2-test: api
  template:
    metadata:
      labels:
        nftytribe-v2-test: api
    spec:
      containers:
        - name: nftytribe-v2-api
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
          image: radianceobi/nftytribe-v2-be
          ports:
            - containerPort: 4000
          envFrom:
            - secretRef:
                name: nfty-be-test
